--- a/DevilHouse/Main.storyboard
+++ b/DevilHouse/Main.storyboard
@@ -276,19 +276,19 @@
                                 <textInputTraits key="textInputTraits" keyboardType="alphabet" returnKeyType="done"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="テキスト" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rZf-od-fCG">
-                                <rect key="frame" x="153" y="177" width="68" height="21"/>
+                                <rect key="frame" x="153" y="177.5" width="68" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="count" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sMW-0u-80y">
-                                <rect key="frame" x="166" y="146" width="44" height="21"/>
+                                <rect key="frame" x="166" y="147" width="44" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hp" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jzo-62-Mal">
-                                <rect key="frame" x="176" y="115" width="23" height="21"/>
+                                <rect key="frame" x="176.5" y="116.5" width="22.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -301,19 +301,19 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LRp-YQ-Fhh">
-                                <rect key="frame" x="265" y="115" width="34" height="21"/>
+                                <rect key="frame" x="265" y="115" width="33.5" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="myHP" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BNx-yx-h3R">
-                                <rect key="frame" x="265" y="160" width="46" height="21"/>
+                                <rect key="frame" x="265" y="159.5" width="46" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="g4c-Fb-i9C" customClass="UIProgressView">
-                                <rect key="frame" x="88" y="80" width="200" height="27"/>
+                                <rect key="frame" x="88" y="80" width="200" height="28.5"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="50y-Q8-S8a"/>
@@ -335,6 +335,13 @@
                                     <constraint firstAttribute="width" constant="188" id="N2Q-Vv-66b"/>
                                 </constraints>
                             </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gAV-sD-1kw">
+                                <rect key="frame" x="67" y="208" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="7Cv-w0-P8d"/>
+                                    <constraint firstAttribute="width" constant="240" id="FvZ-mT-AH7"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
@@ -344,9 +351,11 @@
                             <constraint firstItem="LRp-YQ-Fhh" firstAttribute="leading" secondItem="jzo-62-Mal" secondAttribute="trailing" constant="66" id="3i3-Ia-Qsr"/>
                             <constraint firstItem="jzo-62-Mal" firstAttribute="top" secondItem="g4c-Fb-i9C" secondAttribute="bottom" constant="8" id="3kG-Kx-LXj"/>
                             <constraint firstAttribute="centerX" secondItem="jh8-yM-TYb" secondAttribute="centerX" id="3u9-Hg-RAg"/>
+                            <constraint firstItem="gAV-sD-1kw" firstAttribute="top" secondItem="rZf-od-fCG" secondAttribute="bottom" constant="10" id="5LG-Hz-GyY"/>
                             <constraint firstItem="rZf-od-fCG" firstAttribute="top" secondItem="sMW-0u-80y" secondAttribute="bottom" constant="10" id="8jJ-dI-FTu"/>
                             <constraint firstItem="jh8-yM-TYb" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="144" id="9jE-oF-iYh"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="Xzd-0K-QTD" secondAttribute="bottom" constant="251" id="Afh-Qo-SPx"/>
+                            <constraint firstItem="gAV-sD-1kw" firstAttribute="centerX" secondItem="kh9-bI-dsS" secondAttribute="centerX" id="DGm-lw-CjW"/>
                             <constraint firstAttribute="centerX" secondItem="sMW-0u-80y" secondAttribute="centerX" id="Dzg-zo-Dio"/>
                             <constraint firstAttribute="centerX" secondItem="WKD-JL-Er5" secondAttribute="centerX" id="Eoj-n9-nUf"/>
                             <constraint firstAttribute="centerX" secondItem="g4c-Fb-i9C" secondAttribute="centerX" id="FkW-Z9-K7u"/>
@@ -378,6 +387,7 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
+                        <outlet property="AttackEffect" destination="gAV-sD-1kw" id="eXG-ru-Rm8"/>
                         <outlet property="Count" destination="sMW-0u-80y" id="dzW-pL-Sd1"/>
                         <outlet property="HitPoint" destination="jzo-62-Mal" id="OHJ-XY-JVL"/>
                         <outlet property="HpBar" destination="g4c-Fb-i9C" id="58l-zP-tHo"/>
@@ -424,7 +434,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="title2.png" translatesAutoresizingMaskIntoConstraints="NO" id="HSa-5i-9Yf">
-                                <rect key="frame" x="-1" y="0.0" width="376" height="667"/>
+                                <rect key="frame" x="-0.5" y="0.0" width="375" height="667"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rli-PO-VP3">
                                 <rect key="frame" x="95" y="527" width="184" height="40"/>
