--- a/DevilHouse/Main.storyboard
+++ b/DevilHouse/Main.storyboard
@@ -163,48 +163,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="鋼の剣" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Ky-kS-zwc">
-                                <rect key="frame" x="134" y="127" width="51" height="21"/>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="20110130_monhanicon.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="F0G-y8-FIo">
+                                <rect key="frame" x="134" y="35" width="35" height="39"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="今日は何を買うんだい？" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EvF-4d-bTM">
+                                <rect key="frame" x="200" y="394" width="201" height="50"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="勇者の剣" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CN4-RE-OvM">
-                                <rect key="frame" x="134" y="188" width="68" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JmO-RS-aJz">
-                                <rect key="frame" x="277" y="184" width="60" height="30"/>
-                                <state key="normal" title="購入する">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Paa-Bq-QOT">
-                                <rect key="frame" x="277" y="123" width="60" height="30"/>
-                                <state key="normal" title="購入する">
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="bukiya.png" translatesAutoresizingMaskIntoConstraints="NO" id="kUi-sa-GRC">
+                                <rect key="frame" x="93" y="-68" width="414" height="736"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="JmO-RS-aJz" firstAttribute="leading" secondItem="CN4-RE-OvM" secondAttribute="trailing" constant="75" id="KEf-pX-LnG"/>
-                            <constraint firstItem="0Ky-kS-zwc" firstAttribute="top" secondItem="tpd-V8-E7v" secondAttribute="bottom" constant="107" id="Oqq-Z3-5Fy"/>
-                            <constraint firstItem="Paa-Bq-QOT" firstAttribute="top" secondItem="tpd-V8-E7v" secondAttribute="bottom" constant="103" id="Vj5-Gh-3qj"/>
-                            <constraint firstItem="CN4-RE-OvM" firstAttribute="leading" secondItem="xCf-cG-Xca" secondAttribute="leadingMargin" constant="118" id="WJb-Og-J3g"/>
-                            <constraint firstItem="CN4-RE-OvM" firstAttribute="top" secondItem="0Ky-kS-zwc" secondAttribute="bottom" constant="40" id="WiY-y3-Qly"/>
-                            <constraint firstItem="Paa-Bq-QOT" firstAttribute="leading" secondItem="0Ky-kS-zwc" secondAttribute="trailing" constant="92" id="fef-qN-BgA"/>
-                            <constraint firstItem="JmO-RS-aJz" firstAttribute="top" secondItem="Paa-Bq-QOT" secondAttribute="bottom" constant="31" id="kQ5-NE-VKz"/>
-                            <constraint firstItem="0Ky-kS-zwc" firstAttribute="leading" secondItem="xCf-cG-Xca" secondAttribute="leadingMargin" constant="118" id="sup-Mt-PNg"/>
+                            <constraint firstAttribute="centerX" secondItem="EvF-4d-bTM" secondAttribute="centerX" id="QiX-U6-hdj"/>
+                            <constraint firstAttribute="centerY" secondItem="kUi-sa-GRC" secondAttribute="centerY" id="W6Z-qZ-2ke"/>
+                            <constraint firstItem="UNh-wb-vBN" firstAttribute="top" secondItem="EvF-4d-bTM" secondAttribute="bottom" constant="50" id="bRI-lm-Aoc"/>
+                            <constraint firstAttribute="centerX" secondItem="kUi-sa-GRC" secondAttribute="centerX" id="ukd-P7-eEf"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="You-jk-8DX"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QFC-c5-65O" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1554.5" y="-595.5"/>
+            <point key="canvasLocation" x="1554" y="-596"/>
         </scene>
         <!--Protect View Controller-->
         <scene sceneID="u8l-Bt-0KN">
@@ -570,6 +554,8 @@
         </scene>
     </scenes>
     <resources>
+        <image name="20110130_monhanicon.jpg" width="162" height="171"/>
+        <image name="bukiya.png" width="414" height="736"/>
         <image name="load.png" width="414" height="736"/>
         <image name="title2.png" width="375" height="667"/>
         <image name="town.png" width="375" height="667"/>
