--- a/DevilHouse/Main.storyboard
+++ b/DevilHouse/Main.storyboard
@@ -109,7 +109,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xoU-5S-O08" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-7" y="-221"/>
+            <point key="canvasLocation" x="-47" y="-169"/>
         </scene>
         <!--Town View Controller-->
         <scene sceneID="aOu-dR-WOs">
@@ -821,7 +821,7 @@
         <image name="town3.png" width="414" height="736"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Wv9-O1-Aba"/>
-        <segue reference="U5Z-58-bUv"/>
+        <segue reference="BtT-53-AmP"/>
+        <segue reference="NOd-f5-VfY"/>
     </inferredMetricsTieBreakers>
 </document>
